Update html template

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -5,29 +5,6 @@
     <nav class="navbar navbar-expand-lg navbar-light text-center border-bottom shadow-sm p-3 mb-5 bg-white static-top">
         <div class="container justify-content-md-center">
             <a class="navbar-brand" href="/">eCommerce Box</a>
-
-            {#<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">#}
-            {#<span class="navbar-toggler-icon"></span>#}
-            {#</button>#}
-            {#<div class="collapse navbar-collapse" id="navbarResponsive">#}
-            {#<ul class="navbar-nav ml-auto">#}
-            {#<li class="nav-item active">#}
-            {#<a class="nav-link" href="#">Home#}
-            {#<span class="sr-only">(current)</span>#}
-            {#</a>#}
-            {#</li>#}
-            {#<li class="nav-item">#}
-            {#<a class="nav-link" href="#">About</a>#}
-            {#</li>#}
-            {#<li class="nav-item">#}
-            {#<a class="nav-link" href="#">Services</a>#}
-            {#</li>#}
-            {#<li class="nav-item">#}
-            {#<a class="nav-link" href="#">Contact</a>#}
-            {#</li>#}
-            {#</ul>#}
-            {#</div>#}
-
         </div>
     </nav>
 
@@ -40,17 +17,26 @@
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda beatae cum delectus,
                     distinctio doloremque dolores eaque eum excepturi illum, ipsam laborum necessitatibus non nostrum
                     porro praesentium quia quis quisquam quod reiciendis reprehenderit sed similique sint sit sunt
-                    temporibus tenetur ullam vel voluptatem voluptatibus voluptatum! Aliquid aspernatur consequuntur culpa
-                    cumque delectus, dolores libero quae quaerat sequi totam. Dolores eos ex laborum necessitatibus nobis
-                    nostrum optio quae similique tenetur veritatis. Ad adipisci alias architecto asperiores corporis
+                    temporibus tenetur ullam vel voluptatem voluptatibus voluptatum! Aliquid aspernatur consequuntur
+                    culpa
+                    cumque delectus, dolores libero quae quaerat sequi totam.
                 </p>
                 <p>
                     Dignissimos dolores doloribus dolorum ducimus eaque enim eos explicabo facere facilis, fuga fugiat
-                    illum in ipsam ipsum labore laborum minus molestiae natus nemo nihil nobis nostrum numquam perferendis
+                    illum in ipsam ipsum labore laborum minus molestiae natus nemo nihil nobis nostrum numquam
+                    perferendis
                     provident quasi qui repudiandae rerum suscipit tempore temporibus unde veniam! A adipisci alias,
                     aliquid asperiores beatae consequuntur culpa delectus, dicta doloremque ducimus facere impedit
-                    inventore laboriosam maiores minus molestiae nam nemo nobis nulla numquam perferendis placeat quae quam
-                    quisquam quos ratione repellat rerum tempore temporibus unde ut velit vitae voluptatibus? A aperiam
+                    inventore laboriosam maiores minus molestiae nam nemo nobis nulla numquam perferendis placeat quae
+                    quam
+                    quisquam quos ratione repellat rerum tempore temporibus unde ut velit vitae voluptatibus?
+                </p>
+                <p>
+                    <b>We use here:</b><br>
+                    <a href="http://highcharttable.org/#demo">http://highcharttable.org/</a><br>
+                    <a href="http://fooplugins.github.io/FooTable/index.html">http://fooplugins.github.io/</a><br>
+                    <a href="https://datatables.net/">https://datatables.net/</a><br>
+                    <a href="https://getbootstrap.com">https://getbootstrap.com</a>
                 </p>
             </div>
             <div class="col-lg-4 offset-lg-1">
@@ -60,11 +46,13 @@
                         <form>
                             <div class="form-group">
                                 <label for="exampleInputEmail1">User name or email</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="supershpr@gmail.com">
+                                <input type="email" class="form-control" id="exampleInputEmail1"
+                                       aria-describedby="emailHelp" placeholder="supershpr@gmail.com">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputPassword1">Password</label>
-                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="******">
+                                <input type="password" class="form-control" id="exampleInputPassword1"
+                                       placeholder="******">
                             </div>
                             <div class="form-group form-check">
                                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
@@ -78,7 +66,13 @@
         </div>
     </div>
 
-<div class="border-top p-3 mt-5 bg-white text-center">
-    <p>footer</p>
-</div>
+    <div class="border-top p-3 mt-5 bg-white">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>@footer block here@</p>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
