--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -17,15 +17,14 @@
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda beatae cum delectus,
                     distinctio doloremque dolores eaque eum excepturi illum, ipsam laborum necessitatibus non nostrum
                     porro praesentium quia quis quisquam quod reiciendis reprehenderit sed similique sint sit sunt
-                    temporibus tenetur ullam vel voluptatem voluptatibus voluptatum! Aliquid aspernatur consequuntur
-                    culpa
-                    cumque delectus, dolores libero quae quaerat sequi totam.
+                    temporibus tenetur ullam vel voluptatem voluptatibus voluptatum!
                 </p>
                 <p>
-                    Dignissimos dolores doloribus dolorum ducimus eaque enim eos explicabo facere facilis, fuga fugiat
-                    illum in ipsam ipsum labore laborum minus molestiae natus nemo nihil nobis nostrum numquam
-                    perferendis
-                    provident quasi qui repudiandae rerum suscipit tempore temporibus unde veniam! A adipisci alias,
+                    <figure class="figure">
+                        <img src="{{ asset('images/frontend_img1.jpeg') }}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+                        <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+                    </figure>
+                    A adipisci alias,
                     aliquid asperiores beatae consequuntur culpa delectus, dicta doloremque ducimus facere impedit
                     inventore laboriosam maiores minus molestiae nam nemo nobis nulla numquam perferendis placeat quae
                     quam
