--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -18,7 +18,43 @@
 </head>
 
 <body>
+
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-light text-center border-bottom shadow-sm p-3 mb-5 bg-white static-top">
+    <div class="container">
+        <a class="navbar-brand" href="/">eCommerce Box</a>
+
+        <ul class="nav">
+            <li class="nav-item">
+                <a class="nav-link text-dark active" href="/boards">Boards</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark" href="/orders">Orders</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark" href="/search">Product Search</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark" href="/overhead">Overhead</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
 {% block body %}{% endblock %}
+
+{% block footer %}
+<div class="border-top p-3 mt-5 bg-white">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
+
 {% block javascripts %}
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
