--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -7,23 +7,15 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-7">
-                <h1>e-Box.pro</h1>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda beatae cum delectus,
-                    distinctio doloremque dolores eaque eum excepturi illum, ipsam laborum necessitatibus non nostrum
-                    porro praesentium quia quis quisquam quod reiciendis reprehenderit sed similique sint sit sunt
-                    temporibus tenetur ullam vel voluptatem voluptatibus voluptatum!
-                </p>
+                <h1 class="h4"> {{ page_title }} </h1>
                 <p>
                     <figure class="figure">
                         <img src="{{ asset('images/frontend_img1.jpeg') }}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
                         <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
                     </figure>
-                    A adipisci alias,
-                    aliquid asperiores beatae consequuntur culpa delectus, dicta doloremque ducimus facere impedit
-                    inventore laboriosam maiores minus molestiae nam nemo nobis nulla numquam perferendis placeat quae
-                    quam
-                    quisquam quos ratione repellat rerum tempore temporibus unde ut velit vitae voluptatibus?
+                    A adipisci alias, aliquid asperiores beatae consequuntur culpa delectus, dicta doloremque ducimus
+                    facere impedit inventore laboriosam maiores minus molestiae nam nemo nobis nulla numquam perferendis
+                    placeat quae quam quisquam quos ratione repellat rerum tempore temporibus unde ut velit vitae voluptatibus?
                 </p>
                 <p>
                     <b>We use here:</b><br>
@@ -41,12 +33,12 @@
                             <div class="form-group">
                                 <label for="exampleInputEmail1">User name or email</label>
                                 <input type="email" class="form-control" id="exampleInputEmail1"
-                                       aria-describedby="emailHelp" placeholder="supershpr@gmail.com">
+                                       aria-describedby="emailHelp" placeholder="">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputPassword1">Password</label>
                                 <input type="password" class="form-control" id="exampleInputPassword1"
-                                       placeholder="******">
+                                       placeholder="">
                             </div>
                             <div class="form-group form-check">
                                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
