--- a/app/Resources/views/search/index.html.twig
+++ b/app/Resources/views/search/index.html.twig
@@ -1,61 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} {{ page_title }} {% endblock %}
+{% block title %} {{ page_title }} | eCommerce Box {% endblock %}
 
 {% block body %}
     <!-- Page Content -->
     <div class="container">
         <div class="row">
-            <div class="col-lg-7">
-                <h1>e-Box.pro</h1>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda beatae cum delectus,
-                    distinctio doloremque dolores eaque eum excepturi illum, ipsam laborum necessitatibus non nostrum
-                    porro praesentium quia quis quisquam quod reiciendis reprehenderit sed similique sint sit sunt
-                    temporibus tenetur ullam vel voluptatem voluptatibus voluptatum!
-                </p>
-                <p>
-                    <figure class="figure">
-                        <img src="{{ asset('images/frontend_img1.jpeg') }}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
-                        <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
-                    </figure>
-                    A adipisci alias,
-                    aliquid asperiores beatae consequuntur culpa delectus, dicta doloremque ducimus facere impedit
-                    inventore laboriosam maiores minus molestiae nam nemo nobis nulla numquam perferendis placeat quae
-                    quam
-                    quisquam quos ratione repellat rerum tempore temporibus unde ut velit vitae voluptatibus?
-                </p>
-                <p>
-                    <b>We use here:</b><br>
-                    <a href="http://highcharttable.org/#demo">http://highcharttable.org/</a><br>
-                    <a href="http://fooplugins.github.io/FooTable/index.html">http://fooplugins.github.io/</a><br>
-                    <a href="https://datatables.net/">https://datatables.net/</a><br>
-                    <a href="https://getbootstrap.com">https://getbootstrap.com</a>
-                </p>
-            </div>
-            <div class="col-lg-4 offset-lg-1">
-                <div class="card">
-                    <div class="card-header">Sign in</div>
-                    <div class="card-body">
-                        <form>
-                            <div class="form-group">
-                                <label for="exampleInputEmail1">User name or email</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1"
-                                       aria-describedby="emailHelp" placeholder="supershpr@gmail.com">
-                            </div>
-                            <div class="form-group">
-                                <label for="exampleInputPassword1">Password</label>
-                                <input type="password" class="form-control" id="exampleInputPassword1"
-                                       placeholder="******">
-                            </div>
-                            <div class="form-group form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                <label class="form-check-label" for="exampleCheck1">Remember me</label>
-                            </div>
-                            <button type="submit" class="btn btn-success btn-block">Sign in</button>
-                        </form>
-                    </div>
-                </div>
+            <div class="col-lg-12">
+                <h1 class="h4"> {{ page_title }} </h1>
             </div>
         </div>
     </div>
