--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -21,7 +21,7 @@
 
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light text-center border-bottom shadow-sm p-3 mb-5 bg-white static-top">
-    <div class="container">
+    <div class="container-fluid">
         <a class="navbar-brand" href="/">eCommerce Box</a>
 
         <ul class="nav">
@@ -45,7 +45,7 @@
 
 {% block footer %}
 <div class="border-top p-3 mt-5 bg-white">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
 
