--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -8,11 +8,11 @@
         <div class="row">
             <div class="col-lg-8">
                 <h1 class="h4"> {{ page_title }} </h1>
+                <figure class="figure float-right">
+                    <img src="{{ asset('images/frontend_img1.jpeg') }}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+                    <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+                </figure>
                 <p>
-                    <figure class="figure">
-                        <img src="{{ asset('images/frontend_img1.jpeg') }}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
-                        <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
-                    </figure>
                     A adipisci alias, aliquid asperiores beatae consequuntur culpa delectus, dicta doloremque ducimus
                     facere impedit inventore laboriosam maiores minus molestiae nam nemo nobis nulla numquam perferendis
                     placeat quae quam quisquam quos ratione repellat rerum tempore temporibus unde ut velit vitae voluptatibus?
