--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -6,7 +6,7 @@
     <!-- Page Content -->
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-8">
+            <div class="col-lg-8 col-md-8">
                 <h1 class="h4"> {{ page_title }} </h1>
                 <p>
                     <figure class="figure float-lg-left mr-md-4">
@@ -25,7 +25,7 @@
                     <a href="https://getbootstrap.com">https://getbootstrap.com</a>
                 </p>
             </div>
-            <div class="col-lg-3 offset-lg-1">
+            <div class="col-lg-3 col-md-4 offset-lg-1">
                 <div class="card">
                     <div class="card-header">Sign in</div>
                     <div class="card-body">
