--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -6,11 +6,11 @@
     <!-- Page Content -->
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-8">
+            <div class="col-lg-8 col-md-7">
                 <h1 class="h4"> {{ page_title }} </h1>
                 <p>
                     <figure class="figure float-lg-left mr-md-4">
-                        <img src="{{ asset('images/frontend_img1.jpeg') }}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+                        <img src="{{ asset('images/frontend_img1.jpeg') }}" style="width: 100%; max-width: 320px" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
                         <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
                     </figure>
                     A adipisci alias, aliquid asperiores beatae consequuntur culpa delectus, dicta doloremque ducimus
@@ -25,7 +25,7 @@
                     <a href="https://getbootstrap.com">https://getbootstrap.com</a>
                 </p>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-5">
                 <div class="card">
                     <div class="card-header">Sign in</div>
                     <div class="card-body">
