--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -9,7 +9,7 @@
             <div class="col-lg-8 col-md-7">
                 <h1 class="h4"> {{ page_title }} </h1>
                 <p>
-                    <figure class="figure float-lg-left mr-md-4">
+                    <figure class="figure float-md-left mr-md-3">
                         <img src="{{ asset('images/frontend_img1.jpeg') }}" style="width: 100%; max-width: 320px" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
                         <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
                     </figure>
