--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -24,7 +24,7 @@
     <div class="container-fluid">
         <a class="navbar-brand" href="/">eCommerce Box</a>
 
-        <ul class="nav">
+        <ul class="nav d-flex justify-content-between">
             <li class="nav-item">
                 <a class="nav-link text-dark active" href="/boards">Boards</a>
             </li>
