--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -1,7 +1,10 @@
-{% extends 'base.html.twig' %}
+{% extends 'error.html.twig' %}
 
-{% block title %} 403 {% endblock %}
+{% block title %} 404 {% endblock %}
 
 {% block body %}
-    <h1>Error 404</h1>
+    <div class="jumbotron">
+        <h1 class="display-4">Oppps! 404</h1>
+        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, quaerat!.</p>
+    </div>
 {% endblock %}
