Update error pages

--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -3,8 +3,10 @@
 {% block title %} 404 {% endblock %}
 
 {% block body %}
-    <div class="jumbotron">
-        <h1 class="display-4">Oppps! 404</h1>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, quaerat!.</p>
+    <div class="container justify-content-center align-items-center">
+        <div class="jumbotron mt-5 mb-5">
+            <h1 class="display-4">Oppps! 404</h1>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, quaerat!.</p>
+        </div>
     </div>
 {% endblock %}
