--- a/app/Resources/TwigBundle/views/Exception/error.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error.html.twig
@@ -20,9 +20,11 @@
 <body>
 
 {% block body %}
-    <div class="jumbotron">
-        <h1 class="display-4">Oppps! Error</h1>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, quaerat!.</p>
+    <div class="container justify-content-center align-items-center">
+        <div class="jumbotron mt-5 mb-5">
+            <h1 class="display-4">Oppps! Error</h1>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, quaerat!.</p>
+        </div>
     </div>
 {% endblock %}
 
