Fix doctrine relationships and add smart table

--- a/app/Resources/TwigBundle/views/Exception/error.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error.html.twig
@@ -9,7 +9,7 @@
 
     <title>{% block title %}Error{% endblock %}</title>
 
-    {% block stylesheets %}
+    {% block head_css %}
         <!-- Bootstrap CSS -->
         <link href="{{ asset('css/style.css') }}" type="text/css" rel="stylesheet" media="screen,projection"/>
     {% endblock %}
