--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -18,7 +18,7 @@
                     placeat quae quam quisquam quos ratione repellat rerum tempore temporibus unde ut velit vitae voluptatibus?
                 </p>
                 <p>
-                    <b>We use here:</b><br>
+                    <b>We used:</b><br>
                     <a href="http://highcharttable.org/#demo">http://highcharttable.org/</a><br>
                     <a href="http://fooplugins.github.io/FooTable/index.html">http://fooplugins.github.io/</a><br>
                     <a href="https://datatables.net/">https://datatables.net/</a><br>
