--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,10 +9,13 @@
 
     <title>{% block title %}eCommerce Box{% endblock %}</title>
 
-    {% block stylesheets %}
+    {% block head_css %}
         <!-- Bootstrap CSS -->
         <link href="{{ asset('css/style.css') }}" type="text/css" rel="stylesheet" media="screen,projection"/>
+        <link href="{{ asset('css/jquery.dataTables.css') }}" type="text/css" rel="stylesheet" media="screen,projection"/>
     {% endblock %}
+
+    {% block head_js %}{% endblock %}
 
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}"/>
 </head>
@@ -66,10 +69,11 @@
 </div>
 {% endblock %}
 
-{% block javascripts %}
+{% block footer_js %}
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="{{ asset('js/bootstrap.min.js') }}"></script>
+    <script src="{{ asset('js/jquery.dataTables.js') }}"></script>
     <script src="{{ asset('js/init.min.js') }}"></script>
 {% endblock %}
 </body>
