--- a/app/Resources/views/expenses/index.html.twig
+++ b/app/Resources/views/expenses/index.html.twig
@@ -8,6 +8,41 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="h4"> {{ page_title }} </h1>
+
+
+                <table class="table table-striped smart-table">
+                    <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Date</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Debit</th>
+                        <th scope="col">Credit</th>
+                        <th scope="col"></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for expense in expenses %}
+                        <tr>
+                            <th scope="row">{{ expense.id }}</th>
+                            <td>{{ expense.date|date('Y-m-d') }}</td>
+                            <td>{{ expense.name }}</td>
+                            {% if (expense.type) %}
+                                <td>-</td>
+                                <td>{{ expense.amount|number_format(2, ',', '') }}</td>
+                            {% else %}
+                                <td>{{ expense.amount|number_format(2, ',', '') }}</td>
+                                <td>-</td>
+                            {% endif %}
+                            <td>
+                                <a href="#" class="edit">Edit</a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+
+
             </div>
         </div>
     </div>
