--- a/app/Resources/views/expenses/add.html.twig
+++ b/app/Resources/views/expenses/add.html.twig
@@ -8,6 +8,12 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="h4"> {{ page_title }} </h1>
+
+                {{ form_start(expenseForm) }}
+                    {{ form_widget(expenseForm) }}
+                    <button type="submit" class="btn btn-primary">Save</button>
+                {{ form_end(expenseForm) }}
+
             </div>
         </div>
     </div>
