--- a/app/Resources/views/expenses/index.html.twig
+++ b/app/Resources/views/expenses/index.html.twig
@@ -35,7 +35,7 @@
                                 <td>-</td>
                             {% endif %}
                             <td>
-                                <a href="#" class="edit">Edit</a>
+                                <a href="{{ path('expense_edit', {'id': expense.id}) }}" class="btn btn-sm btn-success">Edit</a>
                             </td>
                         </tr>
                     {% endfor %}
